# ai-rag-evaluation-framework

./: CLAUDE.md  PRD.md  README.md  day1-plan.md  day2-plan.md  day5-plan.md  p2-concepts-primer.html  pyproject.toml  streamlit_app.py
data/input/: financial_services.md  healthcare.md  technology.md
data/output/: chunks_A.json  chunks_B.json  chunks_C.json  chunks_D.json  chunks_E.json  qa_pairs.json
data/output/indices/: bm25_B.pkl  minilm_A.faiss  minilm_B.faiss  (+16 more)
docs/adr/: ADR-001-faiss-over-chromadb-lancedb.md  ADR-002-chunk-size-overlap-semantic.md  ADR-003-embedding-model-comparison.md  ADR-004-synthetic-qa-generation-strategies.md  ADR-005-semantic-vs-fixed-chunking-results.md
docs/plans/: day3-plan.md  day4-plan.md
results/metrics/: grid_search_results.json  judge_results.json  ragas_results.json  reranking_results.json
results/reports/: grid_search_report.json  qa_dataset_report.json
src/: bm25_baseline.py  braintrust_logger.py  cache.py  chunker.py  cli.py  config.py  embedder.py  generation_evaluator.py  grid_search.py  index_builder.py  judge.py  models.py  parser.py  reranker.py  retrieval_evaluator.py  synthetic_qa.py  vector_store.py  visualization.py
tests/: test_bm25_baseline.py  test_braintrust_logger.py  test_cache.py  test_chunker.py  test_cli.py  test_config.py  test_embedder.py  test_generation_evaluator.py  test_grid_search.py  test_index_builder.py  test_judge.py  test_models.py  test_parser.py  test_reranker.py  test_retrieval_evaluator.py  test_synthetic_qa.py  test_vector_store.py  test_verification.py  test_visualization.py
